# studio-mcp

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  config-mock.json  debug-binary-constructor.js  debug-binary-deep.js  debug-hex-dump.js  debug-npm.js  package-lock.json  package.json  pulseengine-studio-mcp-server-0.2.5.tgz  run_integration_tests.sh  test-binary-install.js  test-empty-url.js  test-local.sh  test_mcp_server.py
.github/workflows/: integration-test.yml  release-npm.yml  rust-ci.yml
docs/: README.md  api.md  best-practices.md  configuration.md  installation.md  troubleshooting.md
examples/: README.md  basic-config.json  claude-desktop.md  dev-config.json  multi-instance-config.json  pipeline-automation.md  prod-config.json
mock-studio-server/: README.md  docker-compose.yml
mock-studio-server/wiremock/__files/auth/: jwks.json  refresh-response.json  token-response.json
mock-studio-server/wiremock/__files/pipelines/: list.json  pipeline-def.yaml
mock-studio-server/wiremock/__files/resources/: list.json
mock-studio-server/wiremock/__files/runs/: run-details.json  run-events.json  run-list.json  run-logs.json
mock-studio-server/wiremock/__files/tasks/: list.json
mock-studio-server/wiremock/mappings/auth/: health.json  jwks.json  login.json  refresh.json  revoke.json
mock-studio-server/wiremock/mappings/plm/: pipeline-get.json  pipelines-list.json  resources-list.json  run-cancel.json  run-events.json  run-get.json  run-logs.json  run-start.json  runs-list.json  tasks-list.json
package/test-npm-fresh/: package.json
studio-cli-manager/: Cargo.toml
studio-cli-manager/src/: auth_cli.rs  downloader.rs  executor.rs  lib.rs  version.rs
studio-mcp-server/: Cargo.toml
studio-mcp-server/npm/: .npmignore  README.md  index.js  install.js  package.json  pulseengine-studio-mcp-server-0.2.9.tgz  run.js  uninstall.js
studio-mcp-server/platform-packages/darwin-arm64/: index.js  package.json
studio-mcp-server/platform-packages/darwin-x64/: package.json
studio-mcp-server/platform-packages/linux-x64/: package.json
studio-mcp-server/platform-packages/win32-x64/: index.js  package.json
studio-mcp-server/src/: auth_middleware.rs  main.rs  server.rs
studio-mcp-server/src/cache/: invalidation_service.rs  mod.rs  plm_cache.rs  sensitive_filter.rs
studio-mcp-server/src/resources/: mod.rs  plm.rs
studio-mcp-server/src/tools/: mod.rs  plm.rs
studio-mcp-server/tests/: integration_tests.rs  mock_plm_server.rs  mock_studio_server.rs
studio-mcp-shared/: Cargo.toml
studio-mcp-shared/src/: auth.rs  auth_service.rs  config.rs  error.rs  lib.rs  token_validator.rs  types.rs
test-npm-fresh/: package-lock.json  package.json  pulseengine-studio-mcp-server-0.2.6.tgz
test-npm-fresh/package/: package.json  run.js
test-npm-install/: package-lock.json  package.json
tests/integration/: README.md  minimal_integration_test.sh  package-lock.json  package.json  simple_integration_test.sh  test_mcp_client.py  test_mcp_integration.sh  test_mcp_official.js
