[package]
name = "studio-cli-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Manager for downloading and updating WindRiver Studio CLI"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
directories = { workspace = true }
url = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }

# Version comparison
version-compare = "0.1"

# Local dependencies
studio-mcp-shared = { path = "../studio-mcp-shared" }

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
tokio-test = "0.4"
