[package]
name = "studio-mcp-server"
version = "0.2.2"
edition = "2021"
description = "Model Context Protocol server for WindRiver Studio CLI"
license = "MIT"
authors = ["PulseEngine Team"]
repository = "https://github.com/pulseengine/studio-mcp"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }

# MCP dependencies
pulseengine-mcp-server = { workspace = true }
pulseengine-mcp-protocol = { workspace = true }
async-trait = { workspace = true }

# Local dependencies
studio-cli-manager = { path = "../studio-cli-manager" }
studio-mcp-shared = { path = "../studio-mcp-shared" }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.0"
wiremock = "0.6"
tokio-test = "0.4"
predicates = "3.0"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }

[features]
default = []
development = ["tracing-subscriber/json"]

[[bin]]
name = "studio-mcp-server"
path = "src/main.rs"