[package]
name = "studio-mcp-shared"
version = "0.1.0"
edition = "2021"
description = "Shared types and utilities for WindRiver Studio MCP server"
license = "MIT"
authors = ["PulseEngine Team"]
repository = "https://github.com/pulseengine/studio-mcp"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }