[package]
name = "studio-mcp-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared types and utilities for WindRiver Studio MCP server"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
pulseengine-mcp-server = { workspace = true }
keyring = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
